@@ -4,18 +4,15 @@ import com.google.common.collect.ImmutableSet;
 import fr.inra.oresing.OreSiNg;
 import fr.inra.oresing.TestDatabaseConfig;
 import fr.inra.oresing.domain.application.Application;
-import fr.inra.oresing.domain.application.configuration.Configuration;
-import fr.inra.oresing.domain.application.configuration.ConfigurationSchemaNode;
-import fr.inra.oresing.domain.application.configuration.Tag;
+import fr.inra.oresing.domain.application.configuration.*;
 import fr.inra.oresing.domain.exceptions.OreSiTechnicalException;
 import fr.inra.oresing.domain.exceptions.configuration.ConfigurationException;
 import fr.inra.oresing.domain.file.FileBomResolver;
 import fr.inra.oresing.persistence.JsonRowMapper;
 import fr.inra.oresing.domain.exceptions.configuration.BadApplicationConfigurationException;
 import fr.inra.oresing.rest.model.configuration.ValidationError;
-import fr.inra.oresing.rest.reactive.ReactiveProgression;
-import fr.inra.oresing.rest.reactive.ReactiveResult;
-import fr.inra.oresing.rest.reactive.ReactiveTypeError;
+import fr.inra.oresing.rest.reactive.*;
+import fr.inra.oresing.rest.services.ApplicationConfigurationService;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.AfterAll;
@@ -30,13 +27,10 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.FluxSink;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.PrintWriter;
+import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.function.Consumer;
@@ -55,7 +49,7 @@ import static org.junit.jupiter.api.Assertions.*;
 @org.junit.jupiter.api.Tag("SUITE")
 public class ApplicationConfigurationServiceTest {
 
-    public static final Map<String, List<ReactiveResult>> errors = new HashMap<String, List<ReactiveResult>>();
+    public static final Map<String, List<ReactiveResult>> errors = new HashMap<>();
     protected TestConfigurationBuilder CONFIGURATION_INSTANCE;
     @Autowired
     private Fixtures fixtures;
@@ -82,9 +76,7 @@ public class ApplicationConfigurationServiceTest {
     public void multiplesErrors() {
         CONFIGURATION_INSTANCE.builder("testReturnMultiplesErrors")
                 .withReplace("  sites:", "  site:")
-                .test(errors -> {
-                    assertTrue(errors.size() > 1);
-                });
+                .test(errors -> assertTrue(errors.size() > 1));
     }
 
     @BeforeEach
@@ -95,25 +87,93 @@ public class ApplicationConfigurationServiceTest {
 
     @Test
     public void parseConfigurationFile() {
-        buildFluxRequestJDJson(fluxSink -> {
-            ImmutableSet.of(
-                    //fixtures.getMonsoreApplicationConfigurationResourceName(),
+        List<String> block = Collections.singletonList(buildFluxRequestJDJson(fluxSink -> {
+            ImmutableSet<String> configFiles = ImmutableSet.of(
                     Fixtures.getAcbbApplicationConfigurationResourceName(),
-                    Fixtures.getOlaApplicationConfigurationResourceName(),
-                    Fixtures.getHauteFrequenceApplicationConfigurationResourceName(),
-                    Fixtures.getValidationApplicationConfigurationResourceName()
-                    //fixtures.getProApplicationConfigurationResourceName()
-            ).forEach(resource -> {
-                parseConfigurationFromResource(resource);
-            });
-            final ReactiveProgression.CreateApplicationProgression progression = new ReactiveProgression.CreateApplicationProgression(new ReactiveProgression.DefaultCounter(0L), fluxSink, new ReactiveProgression.CreateApplicationProgressionMessagesLabel());
-//TODO
-    /*        assertFalse(service.parseConfigurationBytes(progression, "vers: 0".getBytes(StandardCharsets.UTF_8)).isValid());
-            assertTrue(service.parseConfigurationBytes(progression, "version: 1".getBytes(StandardCharsets.UTF_8)).isValid());
-            assertFalse(service.parseConfigurationBytes(progression, "version: 2".getBytes(StandardCharsets.UTF_8)).isValid());
-            assertFalse(service.parseConfigurationBytes(progression, "::".getBytes(StandardCharsets.UTF_8)).isValid());*/
-        });
+                    Fixtures.getMonsoreApplicationConfigurationResourceName(),
+                    Fixtures.getRecursivityApplicationConfigurationResourceName(),
+                    Fixtures.getMonsoreApplicationConfigurationWithRepositoryResourceName(),
+                    Fixtures.getPatternApplicationConfigurationResourceName()
+                    //Fixtures.getOlaApplicationConfigurationResourceName(),
+                    //Fixtures.getHauteFrequenceApplicationConfigurationResourceName(),
+                    //Fixtures.getValidationApplicationConfigurationResourceName()
+            );
+            for (String resourceName : configFiles) {
+                parseConfigurationFromResource(resourceName, fluxSink);
+            }
+
+            ReactiveProgression.CreateApplicationProgression progression = new ReactiveProgression.CreateApplicationProgression(
+                    new ReactiveProgression.DefaultCounter(0L),
+                    fluxSink,
+                    new ReactiveProgression.CreateApplicationProgressionMessagesLabel()
+            );
+
+            // Tests avec différentes configurations
+            try {
+                testConfiguration(progression, "version: 0", false);
+                testConfiguration(progression, "version: 1", true);
+                testConfiguration(progression, "version: 2", false);
+                testConfiguration(progression, "::", false);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+
+            fluxSink.complete();
+        })
+                .filter(reactiveResult -> reactiveResult.type().equals(ReactiveType.REACTIVE_ERROR) || reactiveResult.type().equals(ReactiveType.REACTIVE_RESULT))
+
+                .filter(ReactiveTypeResult.class::isInstance)
+                .map(ReactiveTypeResult.class::cast)
+                .map(ReactiveTypeResult::result)
+                .filter(Application.class::isInstance)
+                .map(Application.class::cast)
+                .map(Application::getConfiguration)
+                .map(Configuration::applicationDescription)
+                .map(ApplicationDescription::version)
+                .map(Version::version)
+                .collectList()
+                .block()
+                .stream().collect(Collectors.joining("\n")));
+        Assertions.assertEquals("""
+                1.0.5
+                3.0.1
+                3.0.1
+                3.0.1
+                3.0.1""",
+                block.get(0));
     }
+
+    private void parseConfigurationFromResource(String resource, FluxSink<ReactiveResult> fluxSink) {
+        try (InputStream in = getClass().getResourceAsStream(resource)) {
+            ReactiveProgression.CreateApplicationProgression progression = new ReactiveProgression.CreateApplicationProgression(
+                    new ReactiveProgression.DefaultCounter(0L),
+                    fluxSink,
+                    new ReactiveProgression.CreateApplicationProgressionMessagesLabel()
+            );
+
+            FileBomResolver fileBomResolver = FileBomResolver.of(in);
+            byte[] configBytes = fileBomResolver.readAllBytes();
+
+            Application application = ApplicationConfigurationService.parseConfigurationBytes(
+                    "test",
+                    progression,
+                    FileBomResolver.of(configBytes)
+            );
+            assertNotNull(application, "L'application ne devrait pas être nulle pour " + resource);
+            progression.pushResult(application);
+        } catch (IOException e) {
+            fail("Impossible de lire le fichier de test " + resource + ": " + e.getMessage());
+        }
+    }
+
+    private void testConfiguration(ReactiveProgression.CreateApplicationProgression progression, String config, boolean expectedValidity) throws IOException {
+        byte[] configBytes = config.getBytes(StandardCharsets.UTF_8);
+        FileBomResolver fileBomResolver = FileBomResolver.of(new ByteArrayInputStream(configBytes));
+        Application application = service.parseConfigurationBytes("", progression, fileBomResolver);
+        System.out.println(application);
+        //assertEquals(expectedValidity, application.isValid(), "La configuration '" + config + "' devrait être " + (expectedValidity ? "valide" : "invalide"));
+    }
+
 
     private void parseConfigurationFromResource(final String resource) {
         buildFluxRequestJDJson(fluxSink -> {
@@ -121,7 +181,7 @@ public class ApplicationConfigurationServiceTest {
 
             final Application errors;
             try (final InputStream in = getClass().getResourceAsStream(resource)) {
-                errors = service.parseConfigurationBytes("test", progression, FileBomResolver.of(in));
+                ApplicationConfigurationService.parseConfigurationBytes("test", progression, FileBomResolver.of(in));
                 //TODO
                 //assertTrue(() -> errors.isEmpty(), resource + " doit être reconnu comme un fichier valide");
             } catch (final IOException e) {
@@ -140,8 +200,8 @@ public class ApplicationConfigurationServiceTest {
                         OA_version: 2
                         OA_application:""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNSUPPORTED_OPENADOM_VERSION.getMessage(), validationError.getMessage());
                     assertEquals(ConfigurationSchemaNode.OA_VERSION, validationError.getParam("path"));
                     assertEquals("2", validationError.getParam("actualVersion"));
@@ -157,7 +217,7 @@ public class ApplicationConfigurationServiceTest {
                         context-:""")
                 .test(errors -> {
                     assertEquals(11, errors.size());
-                    final ValidationError validationError = errors.get(0);
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.BAD_DOMAIN_TAG_PATTERN.getMessage(), validationError.getMessage());
                     assertEquals(ConfigurationSchemaNode.OA_TAGS, validationError.getParam("path"));
                     assertEquals(Tag.DomainTag.DOMAIN_PATTERN, validationError.getParam("domainTagPattern"));
@@ -171,8 +231,8 @@ public class ApplicationConfigurationServiceTest {
                         OA_name: fake_application""", """
                         OA_name: F4KE app!cat°""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNSUPPORTED_NAME_APPLICATION.getMessage(), validationError.getMessage());
                     assertEquals(ConfigurationSchemaNode.OA_APPLICATION, validationError.getParam("path"));
                     assertEquals("F4KE app!cat°", validationError.getParam("nameApplication"));
@@ -187,10 +247,10 @@ public class ApplicationConfigurationServiceTest {
                         OA_tags: [ context_ ]""")
                 .test(errors -> {
                     assertEquals(3, errors.size());
-                    final ValidationError validationError = errors.get(0);
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.BAD_TAGS_PATTERNS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > especes", validationError.getParam("path"));
-                    assertEquals(Set.of("__HIDDEN__", "__REFERENCE__", "test", "context", "no-tag", "__DATA__", "__ORDER_([0-9]*)__"), validationError.getParam(("acceptedTagPatterns")));
+                    assertEquals(Set.of("__HIDDEN__", "__REFERENCE__", "test", "context", "no-tag", "__ORDER_(\\d*)__", "__DATA__"), validationError.getParam(("acceptedTagPatterns")));
                 });
     }
 
@@ -201,33 +261,37 @@ public class ApplicationConfigurationServiceTest {
                         OA_tags: [ test, context ]""", """
                         OA_tags: [ test_, context ]""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.BAD_TAGS_PATTERNS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > sites > OA_dynamicComponents > proprieteDeTaxon > OA_tags", validationError.getParam("path"));
-                    assertEquals(Set.of("__HIDDEN__", "__REFERENCE__", "test", "context", "no-tag", "__DATA__", "__ORDER_([0-9]*)__"), validationError.getParam(("acceptedTagPatterns")));
+                    assertEquals(Set.of("__HIDDEN__", "__REFERENCE__", "test", "context", "no-tag", "__ORDER_(\\d*)__", "__DATA__"), validationError.getParam(("acceptedTagPatterns")));
                 });
     }
 
     @Test
     public void testBadReferenceNameForChecker() {
         CONFIGURATION_INSTANCE.builder("testMissingReferenceNameForChecker")
-                .withReplace("          OA_params:\n" +
-                                "            OA_reference:\n" +
-                                "              OA_name: type_de_sites\n" +
-                                "              OA_isParent: true",
-                        "          OA_params:\n" +
-                                "            OA_reference:\n" +
-                                "              OA_name: toto\n" +
-                                "              OA_isParent: true")
+                .withReplace("""
+                                          OA_params:
+                                            OA_reference:
+                                              OA_name: type_de_sites
+                                              OA_isParent: true\
+                                """,
+                        """
+                                          OA_params:
+                                            OA_reference:
+                                              OA_name: toto
+                                              OA_isParent: true\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_REFERENCE_NAME.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > sites > OA_basicComponents > tze_type_nom > OA_checker > OA_params > OA_reference > OA_name", validationError.getParam(("path")));
                     final Set<String> expected = Arrays.stream(new String[]{"especes", "type_de_sites", "sites", "pem", "projet"})
                             .collect(Collectors.toCollection(TreeSet::new));
-                    final Set<String> given = new TreeSet<String>((Collection<? extends String>) validationError.getParam("allDataNames"));
+                    final Set<String> given = new TreeSet<>((Collection<? extends String>) validationError.getParam("allDataNames"));
                     assertEquals(expected, given);
                 });
     }
@@ -239,8 +303,8 @@ public class ApplicationConfigurationServiceTest {
                         OA_version: 3.0.1""", """
                         OA_version: -2""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.BAD_VERSION_PATTERN.getMessage(), validationError.getMessage());
                     assertEquals("-2", validationError.getParam("givenVersion"));
                     assertEquals(ConfigurationSchemaNode.OA_APPLICATION, validationError.getParam("path"));
@@ -252,8 +316,8 @@ public class ApplicationConfigurationServiceTest {
         CONFIGURATION_INSTANCE
                 .builder("testEmptyFile", "emptyConfigurationFile.yaml")
                 .test(errors -> {
-                            assertEquals(1, errors.size() );
-                            final ValidationError validationError = errors.get(0);
+                            assertEquals(1, errors.size());
+                            final ValidationError validationError = errors.getFirst();
                             assertEquals(ConfigurationException.EMPTY_FILE.getMessage(), validationError.getMessage());
                             assertEquals("emptyFile", ConfigurationException.EMPTY_FILE.getMessage());
                         }
@@ -265,12 +329,14 @@ public class ApplicationConfigurationServiceTest {
         CONFIGURATION_INSTANCE.builder("testInvalidDurationForCheckerDate")
                 .withReplace("          OA_name: OA_date\n" +
                                 "          OA_params:",
-                        "          OA_name: OA_date\n" +
-                                "          OA_params:\n" +
-                                "            OA_duration: 1 Yearss")
+                        """
+                                          OA_name: OA_date
+                                          OA_params:
+                                            OA_duration: 1 Yearss\
+                                """)
                 .test(errors -> {
                     assertEquals(1, errors.size());
-                    final ValidationError validationError = errors.get(0);
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.INVALID_DURATION_CHECKER_DATE.getMessage(), validationError.getMessage());
                     assertEquals("1 Yearss", validationError.getParam("declaredDuration"));
                     assertEquals("OA_data > pem > OA_basicComponents > date > OA_checker > OA_params", validationError.getParam(("path")));
@@ -280,17 +346,21 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testInvalidMinForCheckerDate() {
         CONFIGURATION_INSTANCE.builder("testInvalidMinMaxForCheckerDate")
-                .withReplace("          OA_name: OA_date\n" +
-                                "          OA_params:\n" +
-                                "            OA_pattern: dd/MM/yyyy",
-                        "          OA_name: OA_date\n" +
-                                "          OA_params:\n" +
-                                "            OA_pattern: dd/MM/yyyy\n" +
-                                "            OA_min: 12/31/1980\n" +
-                                "            OA_max: 31/12/2024")
+                .withReplace("""
+                                          OA_name: OA_date
+                                          OA_params:
+                                            OA_pattern: dd/MM/yyyy\
+                                """,
+                        """
+                                          OA_name: OA_date
+                                          OA_params:
+                                            OA_pattern: dd/MM/yyyy
+                                            OA_min: 12/31/1980
+                                            OA_max: 31/12/2024\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.INVALID_MIN_MAX_FOR_CHECKER_DATE.getMessage(), validationError.getMessage());
                     assertEquals("12/31/1980", validationError.getParam("declaredMinValue"));
                     assertEquals("31/12/2024", validationError.getParam("declaredMaxValue"));
@@ -302,17 +372,21 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testInvalidMaxForCheckerDate() {
         CONFIGURATION_INSTANCE.builder("testInvalidMinMaxForCheckerDate")
-                .withReplace("          OA_name: OA_date\n" +
-                                "          OA_params:\n" +
-                                "            OA_pattern: dd/MM/yyyy",
-                        "          OA_name: OA_date\n" +
-                                "          OA_params:\n" +
-                                "            OA_pattern: dd/MM/yyyy\n" +
-                                "            OA_min: 31/12/1980\n" +
-                                "            OA_max: 12/31/2024")
+                .withReplace("""
+                                          OA_name: OA_date
+                                          OA_params:
+                                            OA_pattern: dd/MM/yyyy\
+                                """,
+                        """
+                                          OA_name: OA_date
+                                          OA_params:
+                                            OA_pattern: dd/MM/yyyy
+                                            OA_min: 31/12/1980
+                                            OA_max: 12/31/2024\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.INVALID_MIN_MAX_FOR_CHECKER_DATE.getMessage(), validationError.getMessage());
                     assertEquals("31/12/1980", validationError.getParam("declaredMinValue"));
                     assertEquals("12/31/2024", validationError.getParam("declaredMaxValue"));
@@ -328,8 +402,8 @@ public class ApplicationConfigurationServiceTest {
                         - esp_nom""", """
                         - espNom""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.INVALID_NATURAL_KEY.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > especes", validationError.getParam(("path")));
                     assertEquals(Set.of("espNom"), validationError.getParam("invalidNaturalKeyElements"));
@@ -343,15 +417,19 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testInvalidPatternForCheckerDate() {
         CONFIGURATION_INSTANCE.builder("testInvalidPatternForCheckerDate")
-                .withReplace("          OA_name: OA_date\n" +
-                                "          OA_params:\n" +
-                                "            OA_pattern: dd/MM/yyyy",
-                        "          OA_name: OA_date\n" +
-                                "          OA_params:\n" +
-                                "            OA_pattern: bb/MM/yyyy")
+                .withReplace("""
+                                          OA_name: OA_date
+                                          OA_params:
+                                            OA_pattern: dd/MM/yyyy\
+                                """,
+                        """
+                                          OA_name: OA_date
+                                          OA_params:
+                                            OA_pattern: bb/MM/yyyy\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.INVALID_PATTERN_FOR_CHECKER_DATE.getMessage(), validationError.getMessage());
                     assertEquals("bb/MM/yyyy", validationError.getParam("badPattern"));
                     assertEquals("OA_data > pem > OA_basicComponents > date > OA_checker > OA_params > OA_pattern", validationError.getParam(("path")));
@@ -367,8 +445,8 @@ public class ApplicationConfigurationServiceTest {
                         OA_version:
                         OA_application:""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_VERSION_APPLICATION.getMessage(), validationError.getMessage());
                     assertEquals(ConfigurationSchemaNode.OA_VERSION, validationError.getParam("path"));
                     assertEquals(Configuration.OPEN_ADOM_VERSION_PATTERN, validationError.getParam("expectedVersion"));
@@ -378,17 +456,21 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testMissingCheckerName() {
         CONFIGURATION_INSTANCE.builder("testMissingNameChecker")
-                .withReplace("      tze_type_nom:\n" +
-                                "        OA_required: true\n" +
-                                "        OA_checker:\n" +
-                                "          OA_name: OA_reference",
-                        "      tze_type_nom:\n" +
-                                "        OA_required: true\n" +
-                                "        OA_checker:\n" +
-                                "          OA_name:")
+                .withReplace("""
+                                      tze_type_nom:
+                                        OA_required: true
+                                        OA_checker:
+                                          OA_name: OA_reference\
+                                """,
+                        """
+                                      tze_type_nom:
+                                        OA_required: true
+                                        OA_checker:
+                                          OA_name:\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_CHECKER_NAME.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > sites > OA_basicComponents > tze_type_nom", validationError.getParam(("path")));
                     final Set<String> expected = Arrays.stream(new String[]{"OA_reference", "OA_boolean", "OA_date", "OA_integer", "OA_float", "OA_string", "OA_groovyExpression"})
@@ -404,8 +486,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("OA_columnName: \"site\"",
                         "")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_ANY_MANDATORIES_SECTIONS.getMessage(), validationError.getMessage());
                     final Set<String> expectedComponents = Arrays.stream(new String[]{"OA_columnName", "OA_columnNumber"})
                             .collect(Collectors.toCollection(TreeSet::new));
@@ -419,12 +501,12 @@ public class ApplicationConfigurationServiceTest {
     public void testmissingRequiredValueInTimeScopeInSubmission() {
         CONFIGURATION_INSTANCE.builder("testmissingRequiredValueInTimeScopeInSubmission")
                 .withReplace("        OA_timeScope:\n" +
-                             "          OA_component: date",
+                                "          OA_component: date",
                         "        OA_timeScope:\n" +
-                        "          OA_component: ")
+                                "          OA_component: ")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_REQUIRED_VALUE.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_submission > OA_submissionScope > OA_timeScope > OA_component", validationError.getParam(("path")));
                 });
@@ -434,11 +516,11 @@ public class ApplicationConfigurationServiceTest {
     public void testMissingAnyMandatoriesSectionsForAuthorization() {
         CONFIGURATION_INSTANCE.builder("testMissingAnyMandatoriesSectionsForAuthorization")
                 .withReplace("            OA_reference: projet\n" +
-                             "            OA_component: projet",
+                                "            OA_component: projet",
                         "")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_MANDATORIES_SECTIONS.getMessage(), validationError.getMessage());
                     final Set<String> expectedComponents = Arrays.stream(new String[]{"OA_component", "OA_reference"})
                             .collect(Collectors.toSet());
@@ -456,8 +538,8 @@ public class ApplicationConfigurationServiceTest {
                         "            OA_reference: projet\n" +
                                 "            OA_component:")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_REQUIRED_VALUE.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_submission > OA_submissionScope > OA_referenceScopes > 0 > OA_component", validationError.getParam(("path")));
                 });
@@ -469,8 +551,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("        OA_components: [ site ]",
                         "        OA_components: [  ]")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_COMPONENT_FOR_COMPONENT_NAME.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_validations > reference > OA_components", validationError.getParam("path"));
                     final List<String> expectedComponents = Arrays.stream(new String[]{"site_bassin", "date", "tel_experimental_site", "site", "bassin", "projet", "espece", "ordre_affichage", "chemin", "tel_experimental_network", "plateforme", "is_float_value", "tel_value"})
@@ -479,14 +561,15 @@ public class ApplicationConfigurationServiceTest {
                     Assertions.assertIterableEquals(expectedComponents, givenComponents);
                 });
     }
+
     @Test
     public void testMissingArray() {
         CONFIGURATION_INSTANCE.builder("testMissingComponentNameValidation")
                 .withReplace("        OA_components: [ site ]",
                         "        OA_components:")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_REQUIRED_VALUE.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_validations > reference > OA_components", validationError.getParam("path"));
                 });
@@ -500,7 +583,7 @@ public class ApplicationConfigurationServiceTest {
                         OA_name:""")
                 .test(errors -> {
                     assertEquals(1, errors.size());
-                    final ValidationError validationError = errors.get(0);
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_REQUIRED_VALUE.getMessage(), validationError.getMessage());
                     assertEquals("OA_application > OA_name", validationError.getParam("path"));
                 });
@@ -513,8 +596,8 @@ public class ApplicationConfigurationServiceTest {
                         OA_version: 3.0.1""", """
                         OA_version: 'deux'""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.BAD_VERSION_PATTERN.getMessage(), validationError.getMessage());
                     assertEquals("deux", validationError.getParam("givenVersion"));
                     assertEquals(ConfigurationSchemaNode.OA_APPLICATION, validationError.getParam("path"));
@@ -524,15 +607,19 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testMissingPatternForCheckerDate() {
         CONFIGURATION_INSTANCE.builder("testMissingPatternForCheckerDate")
-                .withReplace("          OA_name: OA_date\n" +
-                                "          OA_params:\n" +
-                                "            OA_pattern: dd/MM/yyyy",
-                        "          OA_name: OA_date\n" +
-                                "          OA_params:\n" +
-                                "            OA_pattern:")
+                .withReplace("""
+                                          OA_name: OA_date
+                                          OA_params:
+                                            OA_pattern: dd/MM/yyyy\
+                                """,
+                        """
+                                          OA_name: OA_date
+                                          OA_params:
+                                            OA_pattern:\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_REQUIRED_VALUE.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_basicComponents > date > OA_checker > OA_params > OA_pattern", validationError.getParam(("path")));
                 });
@@ -544,8 +631,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("""
                         OA_version: 2.0.1""", "")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_VERSION_APPLICATION.getMessage(), validationError.getMessage());
                     assertEquals(Configuration.OPEN_ADOM_VERSION_PATTERN, validationError.getParams().get("actualVersion"));
                 });
@@ -554,17 +641,21 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testMissingRequiredValueForChecker() {
         CONFIGURATION_INSTANCE.builder("testMissingRequiredValueForChecker")
-                .withReplace("          OA_params:\n" +
-                                "            OA_reference:\n" +
-                                "              OA_name: type_de_sites\n" +
-                                "              OA_isParent: true",
-                        "          OA_params:\n" +
-                                "            OA_reference:\n" +
-                                "              OA_name:\n" +
-                                "              OA_isParent: true")
+                .withReplace("""
+                                          OA_params:
+                                            OA_reference:
+                                              OA_name: type_de_sites
+                                              OA_isParent: true\
+                                """,
+                        """
+                                          OA_params:
+                                            OA_reference:
+                                              OA_name:
+                                              OA_isParent: true\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_REQUIRED_VALUE.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > sites > OA_basicComponents > tze_type_nom > OA_checker > OA_params > OA_reference > OA_name", validationError.getParam(("path")));
                 });
@@ -576,8 +667,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace(" OA_reference: type_de_sites",
                         " OA_reference:")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_REQUIRED_VALUE.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > sites > OA_dynamicComponents > proprieteDeTaxon > OA_reference", validationError.getParam(("path")));
                 });
@@ -589,8 +680,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("OA_rowNumber: 1",
                         "")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_MANDATORIES_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_constantComponents > tel_experimental_network > OA_importHeaderTarget > OA_columnNumber", validationError.getParam("path"));
                 });
@@ -600,11 +691,11 @@ public class ApplicationConfigurationServiceTest {
     public void testMissingReferencesForAuthorization() {
         CONFIGURATION_INSTANCE.builder("testMissingReferencesForAuthorization")
                 .withReplace("            OA_reference: projet\n" +
-                             "            OA_component: projet",
+                                "            OA_component: projet",
                         "            OA_component: projet")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_MANDATORIES_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals(Set.of(ConfigurationSchemaNode.OA_REFERENCE), validationError.getParam("missingMandatoriesSections"));
                     assertEquals("OA_data > pem > OA_submission > OA_submissionScope > OA_referenceScopes > 0 > OA_exportHeader > OA_component > OA_i18n", validationError.getParam(("path")));
@@ -619,8 +710,8 @@ public class ApplicationConfigurationServiceTest {
                         "            OA_reference:\n" +
                                 "            OA_component: projet")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.MISSING_REQUIRED_VALUE.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_submission > OA_submissionScope > OA_referenceScopes > 0 > OA_reference", validationError.getParam(("path")));
                 });
@@ -630,12 +721,12 @@ public class ApplicationConfigurationServiceTest {
     public void testNegativeColumnNumberToPreHeaderLineInConstantComponents() {
         CONFIGURATION_INSTANCE.builder("testUnknownColumnNumberToFirstRowLineInConstantComponents")
                 .withReplace("OA_rowNumber: 1\n" +
-                             "          OA_columnNumber: 2",
+                                "          OA_columnNumber: 2",
                         "OA_rowNumber: 1\n" +
-                        "          OA_columnNumber: -1")
+                                "          OA_columnNumber: -1")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.NEGATIVE_CONSTANT_IMPORT_HEADER_COLUMN_NUMBER.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_constantComponents > tel_experimental_network > OA_importHeaderTarget > OA_columnNumber", validationError.getParam("path"));
                 });
@@ -645,12 +736,12 @@ public class ApplicationConfigurationServiceTest {
     public void testNegativeColumnNumberToPostHeaderLineInConstantComponents() {
         CONFIGURATION_INSTANCE.builder("testUnknownColumnNumberToFirstRowLineInConstantComponents")
                 .withReplace("          OA_rowNumber: 5\n" +
-                             "          OA_columnName: \"site\"",
+                                "          OA_columnName: \"site\"",
                         "          OA_rowNumber: 5\n" +
-                        "          OA_columnNumber: -1")
+                                "          OA_columnNumber: -1")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.NEGATIVE_CONSTANT_IMPORT_HEADER_COLUMN_NUMBER.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_constantComponents > tel_experimental_site > OA_importHeaderTarget > OA_columnNumber", validationError.getParam("path"));
                 });
@@ -662,8 +753,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("OA_rowNumber: 1",
                         "OA_rowNumber: -1")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.NEGATIVE_CONSTANT_IMPORT_HEADER_ROW_NUMBER.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_constantComponents > tel_experimental_network > OA_importHeaderTarget > OA_rowNumber", validationError.getParam("path"));
                 });
@@ -675,8 +766,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("OA_columnNumber: 2",
                         "OA_columnNumber: 0")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.NEGATIVE_CONSTANT_IMPORT_HEADER_COLUMN_NUMBER.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_constantComponents > tel_experimental_network > OA_importHeaderTarget > OA_columnNumber", validationError.getParam("path"));
                 });
@@ -690,8 +781,8 @@ public class ApplicationConfigurationServiceTest {
                         "      tel_experimental_network:\n" +
                                 "        OA_tags: [ testz ]")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.NOT_EXPECTED_DOMAIN_TAGS.getMessage(), validationError.getMessage());
                     assertEquals(Set.of("testz"), validationError.getParam("notExpectedDomainTags"));
                     assertEquals(Set.of("test", "context"), validationError.getParam("expectedDomainTags"));
@@ -705,8 +796,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("OA_rowNumber: 1",
                         "OA_rowNumber: 8")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.BAD_CONSTANT_IMPORT_HEADER_ROW_NUMBER.getMessage(), validationError.getMessage());
                     assertEquals(8, validationError.getParam("givenRowNumber"));
                     assertEquals(7, validationError.getParam("firstRowLine"));
@@ -721,8 +812,8 @@ public class ApplicationConfigurationServiceTest {
                         OA_tags: [ test, __ORDER_2__ ]""", """
                         OA_tags: [ testz, __ORDER_2__ ]""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.NOT_EXPECTED_DOMAIN_TAGS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_basicComponents > projet > OA_tags", validationError.getParam(("path")));
                     assertEquals(Set.of("testz"), validationError.getParam("notExpectedDomainTags"));
@@ -738,8 +829,8 @@ public class ApplicationConfigurationServiceTest {
                         "      site_bassin:\n" +
                                 "        OA_tags: [ contextt, __HIDDEN__ ]")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.NOT_EXPECTED_DOMAIN_TAGS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_computedComponents > site_bassin > OA_tags", validationError.getParam(("path")));
                     assertEquals(Set.of("contextt"), validationError.getParam("notExpectedDomainTags"));
@@ -755,7 +846,7 @@ public class ApplicationConfigurationServiceTest {
                         OA_tags: [ contxet ]""")
                 .test(errors -> {
                     assertEquals(3, errors.size());
-                    final ValidationError validationError = errors.get(0);
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.NOT_EXPECTED_DOMAIN_TAGS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > especes", validationError.getParam("path"));
                     assertEquals(Set.of("contxet"), validationError.getParam("notExpectedDomainTags"));
@@ -766,27 +857,31 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testUnExpectedReferencesForComputation() {
         CONFIGURATION_INSTANCE.builder("testUnexpectedReferencesForComputation")
-                .withReplace("          OA_expression: >\n" +
-                             "            return references.sites\n" +
-                             "                    .findAll(){it.refValues.zet_chemin_parent.equals((String)datum.site.bassin)}\n" +
-                             "                    .find{it.refValues.zet_nom_key.equals((String)datum.site.plateforme)}\n" +
-                             "                    .getHierarchicalKey();\n" +
-                             "          OA_references:\n" +
-                             "            - sites",
-                        "          OA_expression: >\n" +
-                        "            return references.sites\n" +
-                        "                    .findAll(){it.refValues.zet_chemin_parent.equals((String)datum.site.bassin)}\n" +
-                        "                    .find{it.refValues.zet_nom_key.equals((String)datum.site.plateforme)}\n" +
-                        "                    .getHierarchicalKey();\n" +
-                        "          OA_references:\n" +
-                        "            - site")
+                .withReplace("""
+                                          OA_expression: >
+                                            return references.sites
+                                                    .findAll(){it.refValues.zet_chemin_parent.equals((String)datum.site.bassin)}
+                                                    .find{it.refValues.zet_nom_key.equals((String)datum.site.plateforme)}
+                                                    .getHierarchicalKey();
+                                          OA_references:
+                                            - sites\
+                                """,
+                        """
+                                          OA_expression: >
+                                            return references.sites
+                                                    .findAll(){it.refValues.zet_chemin_parent.equals((String)datum.site.bassin)}
+                                                    .find{it.refValues.zet_nom_key.equals((String)datum.site.plateforme)}
+                                                    .getHierarchicalKey();
+                                          OA_references:
+                                            - site\
+                                """)
                 .test(errors -> {
-                    assertEquals(2, errors.size() );
-                    ValidationError validationError = errors.get(0);
+                    assertEquals(2, errors.size());
+                    ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_REFERENCE_NAME.getMessage(), validationError.getMessage());
                     Set<String> expected = Arrays.stream(new String[]{"especes", "type_de_sites", "sites", "pem", "projet"})
                             .collect(Collectors.toCollection(TreeSet::new));
-                    Set<String> given = new TreeSet<String>((Collection<? extends String>) validationError.getParam("allDataNames"));
+                    Set<String> given = new TreeSet<>((Collection<? extends String>) validationError.getParam("allDataNames"));
                     assertEquals(expected, given);
                     assertEquals("site", validationError.getParam("referenceName"));
                     assertEquals("OA_data > pem > OA_basicComponents > chemin > OA_defaultValue > OA_references", validationError.getParam(("path")));
@@ -805,36 +900,38 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testUnExpectedReferencesForDefaultValueInBasicComponents() {
         CONFIGURATION_INSTANCE.builder("testUnexpectedReferencesForDefaultValue")
-                .withReplace("          OA_expression: >\n" +
-                             "            return references.sites\n" +
-                             "                    .findAll(){it.refValues.zet_chemin_parent.equals((String)datum.site.bassin)}\n" +
-                             "                    .find{it.refValues.zet_nom_key.equals((String)datum.site.plateforme)}\n" +
-                             "                    .getHierarchicalKey();\n" +
-                             "          OA_references:\n" +
-                             "            - sites",
-                        "          OA_expression: >\n" +
-                        "            return references.sites\n" +
-                        "                    .findAll(){it.refValues.zet_chemin_parent.equals((String)datum.site.bassin)}\n" +
-                        "                    .find{it.refValues.zet_nom_key.equals((String)datum.site.plateforme)}\n" +
-                        "                    .getHierarchicalKey();\n" +
-                        "          OA_references:\n" +
-                        "            - site")
+                .withReplace("""
+                                          OA_expression: >
+                                            return references.sites
+                                                    .findAll(){it.refValues.zet_chemin_parent.equals((String)datum.site.bassin)}
+                                                    .find{it.refValues.zet_nom_key.equals((String)datum.site.plateforme)}
+                                                    .getHierarchicalKey();
+                                          OA_references:
+                                            - sites\
+                                """,
+                        """
+                                          OA_expression: >
+                                            return references.sites
+                                                    .findAll(){it.refValues.zet_chemin_parent.equals((String)datum.site.bassin)}
+                                                    .find{it.refValues.zet_nom_key.equals((String)datum.site.plateforme)}
+                                                    .getHierarchicalKey();
+                                          OA_references:
+                                            - site\
+                                """)
                 .test(errors -> {
                     assertEquals(2, errors.size());
-                    ValidationError validationError = errors.get(0);
+                    ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_REFERENCE_NAME.getMessage(), validationError.getMessage());
                     Set<String> expected = Arrays.stream(new String[]{"especes", "type_de_sites", "sites", "pem", "projet"})
                             .collect(Collectors.toCollection(TreeSet::new));
-                    Set<String> given = new TreeSet<String>((Collection<? extends String>) validationError.getParam("allDataNames"));
+                    Set<String> given = new TreeSet<>((Collection<? extends String>) validationError.getParam("allDataNames"));
                     assertEquals(expected, given);
                     assertEquals("site", validationError.getParam("referenceName"));
                     assertEquals("OA_data > pem > OA_basicComponents > chemin > OA_defaultValue > OA_references", validationError.getParam(("path")));
 
                     validationError = errors.get(1);
                     assertEquals(ConfigurationException.UNKNOWN_REFERENCE_NAME.getMessage(), validationError.getMessage());
-                    Arrays.stream(new String[]{"especes", "type_de_sites", "sites", "pem", "projet"})
-                            .collect(Collectors.toCollection(TreeSet::new));
-                    given = new TreeSet<String>((Collection<? extends String>) validationError.getParam("allDataNames"));
+                    given = new TreeSet<>((Collection<? extends String>) validationError.getParam("allDataNames"));
                     assertEquals(expected, given);
                     assertEquals("site", validationError.getParam("referenceName"));
                     assertEquals("OA_data > pem > OA_constantComponents > tel_experimental_site > OA_defaultValue > OA_references", validationError.getParam(("path")));
@@ -844,19 +941,21 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testUnExpectedReferencesForDefaultValueInConstantComponents() {
         CONFIGURATION_INSTANCE.builder("testUnexpectedReferencesForDefaultValueInConstantComponents")
-                .withReplace("OA_references:\n" +
-                                "            - sites\n" +
-                                "        OA_exportHeader:",
-                        "OA_references:\n" +
-                                "            - site\n" +
-                                "        OA_exportHeader:")
+                .withReplace("""
+                                OA_references:
+                                            - sites
+                                        OA_exportHeader:""",
+                        """
+                                OA_references:
+                                            - site
+                                        OA_exportHeader:""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_REFERENCE_NAME.getMessage(), validationError.getMessage());
                     final Set<String> expected = Arrays.stream(new String[]{"especes", "type_de_sites", "sites", "pem", "projet"})
                             .collect(Collectors.toCollection(TreeSet::new));
-                    final Set<String> given = new TreeSet<String>((Collection<? extends String>) validationError.getParam("allDataNames"));
+                    final Set<String> given = new TreeSet<>((Collection<? extends String>) validationError.getParam("allDataNames"));
                     assertEquals(expected, given);
                     assertEquals("site", validationError.getParam("referenceName"));
                     assertEquals("OA_data > pem > OA_constantComponents > tel_experimental_site > OA_defaultValue > OA_references", validationError.getParam("path"));
@@ -867,12 +966,12 @@ public class ApplicationConfigurationServiceTest {
     public void testUnExpectedReferencesWithoutComponentSectionForAuthorization() {
         CONFIGURATION_INSTANCE.builder("testUnexpectedReferencesForDefaultValue")
                 .withReplace("            OA_reference: projet\n" +
-                             "            OA_component: projet",
+                                "            OA_component: projet",
                         "            OA_reference: proj\n" +
-                        "            OA_component: projet")
+                                "            OA_component: projet")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals("projet", validationError.getParam("submissionReference"));
                     assertEquals("proj", validationError.getParam("componentReference"));
                     assertEquals("OA_data > pem > OA_submission > OA_submissionScope > OA_referenceScopes > 2", validationError.getParam(("path")));
@@ -887,7 +986,7 @@ public class ApplicationConfigurationServiceTest {
                         __HIDDEN__:""")
                 .test(errors -> {
                     assertEquals(7, errors.size());
-                    final ValidationError validationError = errors.get(0);
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.ILLEGAL_DOMAIN_TAG_PATTERN.getMessage(), validationError.getMessage());
                     assertEquals(ConfigurationSchemaNode.OA_TAGS, validationError.getParam("path"));
                     assertEquals(Set.of("HiddenTag[tagDefinition=HIDDEN_TAG]"), validationError.getParam("reservedTagNames"));
@@ -903,8 +1002,8 @@ public class ApplicationConfigurationServiceTest {
                         OA_version: 2.0.1
                         OA_unexpectedTag: 1""")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals(Set.of("OA_unexpectedTag"), validationError.getParams().get("unexpectedSections"));
                 });
@@ -913,17 +1012,21 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testUnknownCheckerName() {
         CONFIGURATION_INSTANCE.builder("testUnknownCheckerName")
-                .withReplace("      tze_type_nom:\n" +
-                                "        OA_required: true\n" +
-                                "        OA_checker:\n" +
-                                "          OA_name: OA_reference",
-                        "      tze_type_nom:\n" +
-                                "        OA_required: true\n" +
-                                "        OA_checker:\n" +
-                                "          OA_name: reference")
+                .withReplace("""
+                                      tze_type_nom:
+                                        OA_required: true
+                                        OA_checker:
+                                          OA_name: OA_reference\
+                                """,
+                        """
+                                      tze_type_nom:
+                                        OA_required: true
+                                        OA_checker:
+                                          OA_name: reference\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_CHECKER_NAME.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > sites > OA_basicComponents > tze_type_nom", validationError.getParam(("path")));
                     final Set<String> expected = Arrays.stream(new String[]{"OA_reference", "OA_boolean", "OA_date", "OA_integer", "OA_float", "OA_string", "OA_groovyExpression"})
@@ -941,7 +1044,7 @@ public class ApplicationConfigurationServiceTest {
                         "OA_component: proj")
                 .test(errors -> {
                     assertEquals(2, errors.size());
-                    ValidationError validationError = errors.get(0);
+                    ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_COMPONENT_FOR_COMPONENT_NAME.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_submission > OA_submissionScope > OA_referenceScopes > 2 > OA_component", validationError.getParam(("path")));
                     assertEquals("proj", validationError.getParam(("unknownComponent")));
@@ -967,8 +1070,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("        OA_components: [ site ]",
                         "        OA_components: [ sites ]")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_COMPONENT_FOR_COMPONENT_NAME.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_validations > reference > OA_components", validationError.getParam(("path")));
                     assertEquals("sites", validationError.getParam(("unknownComponent")));
@@ -987,8 +1090,8 @@ public class ApplicationConfigurationServiceTest {
                         "        OA_timeScope:\n" +
                                 "          OA_component: dates")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_COMPONENT_FOR_COMPONENT_NAME.getMessage(), validationError.getMessage());
                     assertEquals("dates", validationError.getParam("unknownComponent"));
                     final List<String> expected = Arrays.stream(new String[]{"date"})
@@ -1002,20 +1105,24 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testUnknownNameAuthorizationScopeInFileNameInSubmission() {
         CONFIGURATION_INSTANCE.builder("testUnknownNameAuthorizationScopeInFileNameSubmission")
-                .withReplace("        OA_matchPatternScopes:\n" +
-                                "          - projet\n" +
-                                "          - site_bassin",
-                        "        OA_matchPatternScopes:\n" +
-                                "          - projet\n" +
-                                "          - site_bassine")
+                .withReplace("""
+                                        OA_matchPatternScopes:
+                                          - projet
+                                          - site_bassin\
+                                """,
+                        """
+                                        OA_matchPatternScopes:
+                                          - projet
+                                          - site_bassine\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_NAME_REFERENCE_SCOPE.getMessage(), validationError.getMessage());
                     assertEquals("site_bassine", validationError.getParam("unknownAuthorizationScope"));
                     final Set<String> expected = Arrays.stream(new String[]{"site_bassin", "projet"})
                             .collect(Collectors.toSet());
-                    final Set<String> given = (Set<String>)  validationError.getParam("knownAuthorizationScope");
+                    final Set<String> given = (Set<String>) validationError.getParam("knownAuthorizationScope");
                     assertEquals(expected, given);
                     assertEquals("OA_submission > OA_fileName > OA_referenceScopes > site_bassine", validationError.getParam(("path")));
                 });
@@ -1027,14 +1134,14 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("OA_referenceComponentToLookForHeader: tze_nom_key",
                         "OA_referenceComponentToLookForHeader: nom_key")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_REFERENCE_COLUMN_TO_LOOK_FOR_HEADER.getMessage(), validationError.getMessage());
                     assertEquals("type_de_sites", validationError.getParam("referenceName"));
                     assertEquals("nom_key", validationError.getParam("columnNameReference"));
                     final Set<String> expected = Arrays.stream(new String[]{"tze_nom_key", "tze_nom_fr", "tze_nom_en", "tze_definition_fr", "tze_definition_en"})
                             .collect(Collectors.toCollection(TreeSet::new));
-                    final Set<String> given = new TreeSet<String>((Collection<? extends String>) validationError.getParam("listColumnsNameReference"));
+                    final Set<String> given = new TreeSet<>((Collection<? extends String>) validationError.getParam("listColumnsNameReference"));
                     assertEquals(expected, given);
                     assertEquals("OA_data > sites > OA_dynamicComponents > proprieteDeTaxon > OA_referenceComponentToLookForHeader", validationError.getParam("path"));
                 });
@@ -1046,13 +1153,13 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace(" OA_reference: type_de_sites",
                         " OA_reference: type_de_site")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_REFERENCE_NAME.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > sites > OA_dynamicComponents > proprieteDeTaxon > OA_reference", validationError.getParam(("path")));
                     final Set<String> expected = Arrays.stream(new String[]{"especes", "type_de_sites", "sites", "pem", "projet"})
                             .collect(Collectors.toCollection(TreeSet::new));
-                    final Set<String> given = new TreeSet<String>((Collection<? extends String>) validationError.getParam("allDataNames"));
+                    final Set<String> given = new TreeSet<>((Collection<? extends String>) validationError.getParam("allDataNames"));
                     assertEquals(expected, given);
                     assertEquals("type_de_site", validationError.getParam("referenceName"));
                 });
@@ -1061,22 +1168,26 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testUnknownReferenceNameForChecker() {
         CONFIGURATION_INSTANCE.builder("testUnknownReferenceNameForChecker")
-                .withReplace("          OA_params:\n" +
-                                "            OA_reference:\n" +
-                                "              OA_name: type_de_sites\n" +
-                                "              OA_isParent: true",
-                        "          OA_params:\n" +
-                                "            OA_reference:\n" +
-                                "              OA_name: tr_type_de_sites\n" +
-                                "              OA_isParent: true")
+                .withReplace("""
+                                          OA_params:
+                                            OA_reference:
+                                              OA_name: type_de_sites
+                                              OA_isParent: true\
+                                """,
+                        """
+                                          OA_params:
+                                            OA_reference:
+                                              OA_name: tr_type_de_sites
+                                              OA_isParent: true\
+                                """)
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNKNOWN_REFERENCE_NAME.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > sites > OA_basicComponents > tze_type_nom > OA_checker > OA_params > OA_reference > OA_name", validationError.getParam(("path")));
                     final Set<String> expected = Arrays.stream(new String[]{"especes", "type_de_sites", "sites", "pem", "projet"})
                             .collect(Collectors.toCollection(TreeSet::new));
-                    final Set<String> given = new TreeSet<String>((Collection<? extends String>) validationError.getParam("allDataNames"));
+                    final Set<String> given = new TreeSet<>((Collection<? extends String>) validationError.getParam("allDataNames"));
                     assertEquals(expected, given);
                     assertEquals("tr_type_de_sites", validationError.getParam("referenceName"));
                 });
@@ -1088,8 +1199,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("OA_strategy: OA_VERSIONING",
                         "OA_strategy: OA_VERSIONINGY")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.BAD_ENUM_SECTION_TYPE.getMessage(), validationError.getMessage());
                     assertEquals("OA_VERSIONINGY", validationError.getParam("givenValue"));
                     final Set<String> expected = Arrays.stream(new String[]{"OA_INSERTION", "OA_VERSIONING"})
@@ -1108,8 +1219,8 @@ public class ApplicationConfigurationServiceTest {
                         "  test:\n" +
                                 "    frrr: test")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNSUPORTED_I18N_KEY_LANGUAGE.getMessage(), validationError.getMessage());
                     assertEquals("OA_tags > test", validationError.getParam("path"));
                 });
@@ -1121,8 +1232,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: Application pour de faux",
                         "frrr: Application pour de faux")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_application > OA_i18n > OA_title > en > frrr", validationError.getParam("path"));
                 });
@@ -1134,8 +1245,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: Projets",
                         "frrr: Projets")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_submission > OA_submissionScope > OA_referenceScopes > 0 > OA_i18n > OA_title > en > frrr", validationError.getParam("path"));
                 });
@@ -1147,8 +1258,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: site",
                         "frrr: projet")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_submission > OA_submissionScope > OA_referenceScopes > 1 > OA_exportHeader > OA_title > en > frrr", validationError.getParam("path"));
                 });
@@ -1160,8 +1271,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: Type de Sites",
                         "frrr: Type de Sites")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > sites > OA_dynamicComponents > proprieteDeTaxon > OA_exportHeader > OA_title > en > frrr", validationError.getParam("path"));
                 });
@@ -1173,8 +1284,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: \"colonne calculée\"",
                         "frrr: \"colonne calculée\"")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > especes > OA_computedComponents > my_computed_column > OA_exportHeader > OA_title > en > frrr", validationError.getParam("path"));
                 });
@@ -1186,8 +1297,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: Espèces",
                         "frrr: Espèces")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > especes > OA_i18n > OA_title > en > frrr", validationError.getParam("path"));
                 });
@@ -1199,8 +1310,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: \"{esp_nom}\"",
                         "frrr: \"{esp_nom}\"")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > especes > OA_i18nDisplayPattern > OA_title > en > frrr", validationError.getParam("path"));
                 });
@@ -1212,8 +1323,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: \"nom du réseau expérimental\"",
                         "frrr: \"nom du réseau expérimental\"")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_constantComponents > tel_experimental_network > OA_exportHeader > OA_description > en > frrr", validationError.getParam("path"));
                 });
@@ -1225,8 +1336,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: Vous pouvez demander",
                         "frrr: Vous pouvez demander")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_rightsRequest > OA_i18n > OA_description > en > frrr", validationError.getParam("path"));
                 });
@@ -1238,8 +1349,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("fr: les reference",
                         "frrr: les reference")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.UNEXPECTED_SECTIONS.getMessage(), validationError.getMessage());
                     assertEquals("OA_data > pem > OA_validations > reference > OA_i18n > frrr", validationError.getParam("path"));
                 });
@@ -1251,8 +1362,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("OA_headerName: \"Nom de la clé du site\"",
                         "OA_headerName: \"zet_chemin_parent\"")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.DUPLICATED_COMPONENT_HEADER.getMessage(), validationError.getMessage());
                     assertIterableEquals(
                             List.of("zet_nom_key", "zet_chemin_parent"),
@@ -1270,8 +1381,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("tel_value",
                         "tel_experimental_site")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.DUPLICATED_COMPONENT_NAME.getMessage(), validationError.getMessage());
                     assertIterableEquals(
                             List.of("OA_data > pem > OA_constantComponents > tel_experimental_site", "OA_data > pem > OA_patternComponents > tel_experimental_site"),
@@ -1287,12 +1398,12 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("swc_qc",
                         "tel_date")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.DUPLICATED_COMPONENT_HEADER_IN_PATTERN_COMPONENT.getMessage(), validationError.getMessage());
-                    assertEquals("tel_date",  validationError.getParam("qualifierName"));
-                    assertEquals("pem",  validationError.getParam("data"));
-                    assertEquals("tel_value",  validationError.getParam("patternComponent"));
+                    assertEquals("tel_date", validationError.getParam("qualifierName"));
+                    assertEquals("pem", validationError.getParam("data"));
+                    assertEquals("tel_value", validationError.getParam("patternComponent"));
                     assertIterableEquals(
                             List.of(
                                     "OA_data > pem > OA_patternComponents > tel_value > OA_componentQualifiers > tel_date",
@@ -1310,8 +1421,8 @@ public class ApplicationConfigurationServiceTest {
                 .withReplace("pem",
                         "sites")
                 .test(errors -> {
-                    assertEquals(1, errors.size() );
-                    final ValidationError validationError = errors.get(0);
+                    assertEquals(1, errors.size());
+                    final ValidationError validationError = errors.getFirst();
                     assertEquals(ConfigurationException.DUPLICATE_KEY.getMessage(), validationError.getMessage());
                 });
     }
@@ -1319,9 +1430,7 @@ public class ApplicationConfigurationServiceTest {
     @Test
     public void testValidConfiguration() {
         CONFIGURATION_INSTANCE.builder("testValidConfiguration")
-                .test(errors -> {
-                    assertTrue(errors.isEmpty());
-                });
+                .test(errors -> assertTrue(errors.isEmpty()));
     }
 
 
@@ -1364,20 +1473,21 @@ public class ApplicationConfigurationServiceTest {
 
                 final Object test = buildFluxRequestJDJson(fluxSink -> {
                     final ReactiveProgression.CreateApplicationProgression progression = new ReactiveProgression.CreateApplicationProgression(new ReactiveProgression.DefaultCounter(0L), fluxSink, new ReactiveProgression.CreateApplicationProgressionMessagesLabel());
-                    final Application application = service.parseConfigurationBytes("test", progression, FileBomResolver.of(wrongYaml));
+                    try {
+                        final Application application = ApplicationConfigurationService.parseConfigurationBytes("test", progression, FileBomResolver.of(wrongYaml));
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
                     fluxSink.complete();
                 })
-                        .flatMap(reactiveResult -> {
-                            return switch (reactiveResult) {
-                                case final ReactiveTypeError re -> {
-                                    errors
-                                            .computeIfAbsent(methodName, k -> new LinkedList())
-                                            .add(re);
-                                    yield Flux.just((ValidationError) re.result());
-                                }
-                                default -> Flux.empty();
-                            };
-
+                        .flatMap(reactiveResult -> switch (reactiveResult) {
+                            case final ReactiveTypeError re -> {
+                                errors
+                                        .computeIfAbsent(methodName, k -> new LinkedList())
+                                        .add(re);
+                                yield Flux.just((ValidationError) re.result());
+                            }
+                            default -> Flux.empty();
                         })
                         .collectList()
                         .map(fe -> {
@@ -1389,7 +1499,7 @@ public class ApplicationConfigurationServiceTest {
                             }
                         })
                         .block();
-                switch (test) {
+                switch (Objects.requireNonNull(test)) {
                     case final Exception e -> fail(e.getMessage());
                     default -> log.info("test terminé");
                 }
@@ -1397,8 +1507,6 @@ public class ApplicationConfigurationServiceTest {
                 throw new OreSiTechnicalException("impossible de lire le fichier de test", e);
             } catch (final BadApplicationConfigurationException e) {
                 //errors.put(methodName, e);
-            } catch (final Exception e) {
-                throw e;
             }
         }
 
